chore: add prettier

--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
   "homepage": "https://github.com/hexparrot/mineos-node",
   "scripts": {
     "start": "node webui.js",
-    "test": "nodeunit ./test"
+    "test": "nodeunit ./test",
+    "lint": "prettier ./",
+    "lint:check": "npm run lint --check",
+    "lint:write": "npm run lint --write"
+  },
+  "lint-staged": {
+    "*.{md,yml,js,css,scss,html,json}": "prettier --write"
   },
   "dependencies": {
     "adm-zip": "^0.4.11",
@@ -83,6 +89,7 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "nodeunit": "^0.11.3"
+    "nodeunit": "^0.11.3",
+    "prettier": "2.5.1"
   }
 }
