style: apply prettier

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     environment:
       # Should the web interface use HTTPS or HTTP?
       # Valid entries are "true" and "false" (with quotes)
-      USE_HTTPS: "true"
+      USE_HTTPS: 'true'
 
       # What port should the web interface listen on?
       # This is independant of the USE_HTTPS setting.
@@ -48,14 +48,14 @@ services:
     ports:
       # HTTPS port for web interface. If you change the SERVER_PORT
       # variable, also change this mapping.
-      - "8443:8443/tcp"
+      - '8443:8443/tcp'
 
       # Minecraft server ports. 25565 is the default, but is you plan
       # on running multiple servers at the same time, each will need
       # a unique port unless you are using bungiecord.
       # Expand this range as needed.
-      - "25565-25570:25565-25570/tcp"
-      - "25565-25570:25565-25570/udp"
+      - '25565-25570:25565-25570/tcp'
+      - '25565-25570:25565-25570/udp'
 
 volumes:
   mineos_data:
