--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
+    "lint-staged": "12.3.4",
     "nodeunit": "^0.11.3",
     "prettier": "2.5.1"
   }
