--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "adm-zip": "^0.4.11",
-    "angular": "1.5.x",
+    "angular": "^1.8.2",
     "angular-moment": "1.3.x",
     "angular-sanitize": "1.5.x",
     "angular-translate": "^2.18.2",
@@ -38,7 +38,7 @@
     "axios": "^0.24.0",
     "bindings": "1.5.0",
     "body-parser": "^1.19.2",
-    "chownr": "1.0.x",
+    "chownr": "^1.1.4",
     "compression": "^1.7.4",
     "cookie-parser": "1.4.x",
     "cron": "1.3.x",
@@ -73,7 +73,7 @@
     "request-progress": "3.0.x",
     "rsync": "0.6.x",
     "sha512crypt-node": "0.1.x",
-    "socket.io": "1.7.x",
+    "socket.io": "^4.4.1",
     "strftime": "0.9.x",
     "tail": "1.2.1",
     "tar": "^4.4.18",
@@ -90,7 +90,7 @@
   },
   "devDependencies": {
     "lint-staged": "12.3.4",
-    "nodeunit": "^0.11.3",
+    "nodeunit": "^0.9.2",
     "prettier": "2.5.1"
   }
 }
